# birds

./: pyproject.toml  scores.csv
birds/: app.py  data.py
