[tool.poetry]
name = "birds"
version = "0.1.0"
description = ""
authors = ["Liam Pieri <liamwazherealso@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

